--- a/algorithms.bib
+++ b/algorithms.bib
@@ -1,12 +1,51 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2025-07-05 17:32:01 -0500 
+%% Created for Jeff Erickson at 2025-08-16 15:33:47 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{cfjjm-supiw-10,
+	abstract = {We revisit the well-known problem of sorting under partial information: sort a finite set given the outcomes of comparisons between some pairs of elements. The input is a partially ordered set $P$, and solving the problem amounts to discovering an unknown linear extension of P, using pairwise comparisons. The information-theoretic lower bound on the number of comparisons needed in the worst case is log e(P), the binary logarithm of the number of linear extensions of $P$. In a breakthrough paper, Jeff Kahn and Jeong Han Kim (STOC 1992) showed that there exists a polynomial-time algorithm for the problem achieving this bound up to a constant factor. Their algorithm invokes the ellipsoid algorithm at each iteration for determining the next comparison, making it impractical.We develop efficient algorithms for sorting under partial information. Like Kahn and Kim, our approach relies on graph entropy. However, our algorithms differ in essential ways from theirs. Rather than resorting to convex programming for computing the entropy, we approximate the entropy, or make sure it is computed only once in a restricted class of graphs, permitting the use of a simpler algorithm. Specifically, we present: an O(n2) algorithm performing O(log n ⋅ log e(P)) comparisons; an O(n2.5) algorithm performing at most (1+ε) log e(P) + Oε(n) comparisons; an O(n2.5) algorithm performing O(log e(P)) comparisons. All our algorithms are simple to implement.},
+	arxiv = {0911.0086},
+	author = {Cardinal, Jean and Fiorini, Samuel and Joret, Gwena\"{e}l and Jungers, Rapha\"{e}l M. and Munro, J. Ian},
+	booktitle = {Proc. 42nd Ann. ACM Symp. Theory Comput.},
+	date-added = {2025-08-16 15:33:06 -0500},
+	date-modified = {2025-08-16 15:33:47 -0500},
+	doi = {10.1145/1806689.1806740},
+	keywords = {graph entropy, partial order},
+	pages = {359--368},
+	title = {Sorting under partial information (without the ellipsoid algorithm)},
+	year = {2010}}
+
+@article{kk-es-95,
+	abstract = {We reconsider the old problem of sorting under partial information, and give polynomial time algorithms for the following tasks: (1) Given a partial order P, find (adaptively) a sequence of comparisons (questions of the form, "is x < y?") which sorts ( i.e., finds an unknown linear extension of) P using O(log(e(P))) comparisons in worst case (where e(P) is the number of linear extensions of P). (2) Compute (on line) answers to any comparison algorithm for sorting a partial order P which force the algorithm to use Ω(log(e(P))) comparisons. (3) Given a partial order P of size n, estimate e(P) to within a factor exponential in n. (We give upper and lower bounds which differ by the factor nn/n!.) Our approach, based on entropy of the comparability graph of P and convex minimization via the ellipsoid method, is completely different from earlier attempts to deal with these questions.},
+	author = {Kahn, Jeff and Kim, Jeong Han},
+	date-added = {2025-08-16 15:31:14 -0500},
+	date-modified = {2025-08-16 15:31:42 -0500},
+	doi = {10.1006/jcss.1995.1077},
+	journal = {J. Comput. Syst. Sci.},
+	number = {3},
+	pages = {390--399},
+	title = {Entropy and Sorting},
+	volume = {51},
+	year = {1995}}
+
+@article{f-gitbs-76,
+	abstract = {We define a sorting problem on an n element set S to be a family 〈A1,{\ldots},Ar〉 of disjoint subsets of the set of n! linear orderings on S. Given an ordering ω ∈ ∪jAj, we want to determine to which subset Aj the ordering ω belongs by performing a sequence of comparisons between the elements of S. The classical sorting problem corresponds to the case where the subsets Aj comprise the n! singleton sets of orderings. If a sorting problem is defined by r nonempty subsets Aj, then the information theory bound states that at least log2 r comparisons are required to solve that problem in the worst case. The purpose of this paper is to investigate the accuracy of this bound. While we show that it is usually very weak, we are nevertheless able to define a large class of problems for which this bound is good. As an application, we show that if X and Y are n element sets of real numbers, then the n2 element set X + Y can be sorted with O (n2) comparisons, improving upon the n2 log2 n bound established by Harper et al. The problem of sorting X + Y was posed by Berkelamp.},
+	author = {Fredman, Michael L.},
+	date-added = {2025-08-16 15:28:44 -0500},
+	date-modified = {2025-08-16 15:29:16 -0500},
+	doi = {10.1016/0304-3975(76)90078-5},
+	journal = {Theoret. Comput. Sci.},
+	number = {4},
+	pages = {355--361},
+	title = {How good is the information theory bound in sorting?},
+	volume = {1},
+	year = {1976}}
 
 @article{v-adsem-08,
 	author = {Vitter, Jeffrey Scott},
@@ -47,7 +86,8 @@
 	pages = {1116--1127},
 	title = {The input/output complexity of sorting and related problems},
 	volume = {31},
-	year = {1988}}
+	year = {1988},
+	bdsk-url-1 = {https://doi.org/10.1145/48529.48535}}
 
 @article{acfs-umhmc-94,
 	abstract = {TheUniform Memory Hierarchy (UMH) model introduced in this paper captures performance-relevant aspects of the hierarchical nature of computer memory. It is used to quantify architectural requirements of several algorithms and to ratify the faster speeds achieved by tuned implementations that use improved data-movement strategies.},
@@ -71,7 +111,8 @@
 	doi = {10.1109/SFCS.1987.31},
 	pages = {204--216},
 	title = {Hierarchical Memory with Block Transfer},
-	year = {1987}}
+	year = {1987},
+	bdsk-url-1 = {https://doi.org/10.1109/SFCS.1987.31}}
 
 @inproceedings{aacs-mhm-87,
 	abstract = {In this paper we introduce the Hierarchical Memory Model (HMM) of computation. It is intended to model computers with multiple levels in the memory hierarchy. Access to memory location x is assumed to take time ⌈ log x ⌉. Tight lower and upper bounds are given in this model for the time complexity of searching, sorting, matrix multiplication and FFT. Efficient algorithms in this model utilize locality of reference by bringing data into fast memory and using them several times before returning them to slower memory. It is shown that the circuit simulation problem has inherently poor locality of reference. The results are extended to HMM's where memory access time is given by an arbitrary (nondecreasing) function. Tight upper and lower bounds are obtained for HMM's with polynomial memory access time; the algorithms for searching, FFT and matrix multiplication are shown to be optimal for arbitrary memory access time. On-line memory management algorithms for the HMM model are also considered. An algorithm that uses LRU policy at the successive ``levels'' of the memory hierarchy is shown to be optimal.},
@@ -82,7 +123,8 @@
 	doi = {10.1145/28395.28428},
 	pages = {305--314},
 	title = {A model for hierarchical memory},
-	year = {1987}}
+	year = {1987},
+	bdsk-url-1 = {https://doi.org/10.1145/28395.28428}}
 
 @article{v-eicvm-21,
 	abstract = {The information capacity of the universe has been a topic of great debate since the 1970s and continues to stimulate multiple branches of physics research. Here, we used Shannon's information theory to estimate the amount of encoded information in all the visible matter in the universe. We achieved this by deriving a detailed formula estimating the total number of particles in the observable universe, known as the Eddington number, and by estimating the amount of information stored by each particle about itself. We determined that each particle in the observable universe contains 1.509 bits of information and there are ∼6 × 1080 bits of information stored in all the matter particles of the observable universe.},
@@ -110,7 +152,8 @@
 	pages = {825--874},
 	title = {The holographic principle},
 	volume = {74},
-	year = {2002}}
+	year = {2002},
+	bdsk-url-1 = {https://doi.org/10.1103/RevModPhys.74.825}}
 
 @inproceedings{h-drqg-09,
 	arxiv = {gr-qc/9310026},
@@ -153,7 +196,8 @@
 	pages = {1805--1823},
 	title = {How does the Entropy/Information Bound Work?},
 	volume = {35},
-	year = {2005}}
+	year = {2005},
+	bdsk-url-1 = {https://doi.org/10.1007/s10701-005-7350-7}}
 
 @misc{gj-waopc-22,
 	arxiv = {2206.13851},
@@ -163,7 +207,8 @@
 	doi = {10.48550/ARXIV.2206.13851},
 	howpublished = {Preprint},
 	title = {Which arithmetic operations can be performed in constant time in the {RAM} model with addition?},
-	year = {2022}}
+	year = {2022},
+	bdsk-url-1 = {https://doi.org/10.48550/ARXIV.2206.13851}}
 
 @article{g-mqs-89,
 	abstract = {THE method of quarter squares consists in the use of the formula ab = ¼(a+b)2 - ¼(a-b)2 to effect the multiplication of two numbers, a and b. If we are provided with a table giving the values of ¼n2 up to a given value of n, we may obtain, by the aid of this formula, without performing any multiplication, the product of any two numbers whose sum does not exceed the limit of the table.},
@@ -190,7 +235,8 @@
 	pages = {13--27},
 	title = {Parity, circuits, and the polynomial-time hierarchy},
 	volume = {17},
-	year = {1984}}
+	year = {1984},
+	bdsk-url-1 = {https://doi.org/10.1007/BF01744431}}
 
 @article{k-eapr-59,
 	author = {Kaphengst, Heinz},
