--- a/topology.bib
+++ b/topology.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2025-08-01 13:19:07 -0500 
+%% Created for Jeff Erickson at 2025-08-31 18:14:38 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -13357,7 +13357,8 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	read = {1},
 	title = {Zur Morphologie der Polyeder},
 	url = {https://catalog.hathitrust.org/Record/000360656},
-	year = {1891}}
+	year = {1891},
+	bdsk-url-1 = {https://catalog.hathitrust.org/Record/000360656}}
 
 @article{hhn-unnrm-12,
 	arxiv = {1012.4131},
@@ -22793,14 +22794,15 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	author = {Althaus, Ernst and Fink, Christian},
 	booktitle = {Proc. 9th Int. Conf. Integer Prog. Combin. Optim.},
 	date-added = {2011-05-22 15:28:00 -0500},
-	date-modified = {2012-05-06 20:23:08 +0000},
+	date-modified = {2025-08-31 18:12:26 -0500},
+	doi = {10.1007/3-540-47867-1_19},
 	pages = {258--272},
 	publisher = {Springer-Verlag},
 	read = {1},
 	series = {Lecture Notes Comput. Sci.},
 	title = {A Polyhedral Approach to Surface Reconstruction from Planar Contours},
 	volume = {2337},
-	year = {2006},
+	year = {2002},
 	bdsk-url-1 = {http://dx.doi.org/10.1007/3-540-47867-1_19}}
 
 @inproceedings{bgcm-mss-02,
