--- a/algorithms.bib
+++ b/algorithms.bib
@@ -1,12 +1,26 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2025-07-05 17:32:01 -0500 
+%% Created for Jeff Erickson at 2025-07-21 17:28:15 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{p-lpsft-87,
+	abstract = {In recent years several new algorithms have appeared for the problem of enumerating the prime numbers up to some limit N. We show that all these algorithms emerge from the common idea of a sieve by the judicious use of three simple principles.},
+	author = {Pritchard, Paul},
+	comments = {Compute all primes less than N in O(N) time},
+	date-added = {2025-07-21 17:10:32 -0500},
+	date-modified = {2025-07-21 17:11:14 -0500},
+	doi = {10.1016/0167-6423(87)90024-4},
+	journal = {Science of Computer Programming},
+	number = {1},
+	pages = {17-35},
+	title = {Linear prime-number sieves: A family tree},
+	volume = {9},
+	year = {1987}}
 
 @article{v-adsem-08,
 	author = {Vitter, Jeffrey Scott},
@@ -47,7 +61,8 @@
 	pages = {1116--1127},
 	title = {The input/output complexity of sorting and related problems},
 	volume = {31},
-	year = {1988}}
+	year = {1988},
+	bdsk-url-1 = {https://doi.org/10.1145/48529.48535}}
 
 @article{acfs-umhmc-94,
 	abstract = {TheUniform Memory Hierarchy (UMH) model introduced in this paper captures performance-relevant aspects of the hierarchical nature of computer memory. It is used to quantify architectural requirements of several algorithms and to ratify the faster speeds achieved by tuned implementations that use improved data-movement strategies.},
@@ -71,7 +86,8 @@
 	doi = {10.1109/SFCS.1987.31},
 	pages = {204--216},
 	title = {Hierarchical Memory with Block Transfer},
-	year = {1987}}
+	year = {1987},
+	bdsk-url-1 = {https://doi.org/10.1109/SFCS.1987.31}}
 
 @inproceedings{aacs-mhm-87,
 	abstract = {In this paper we introduce the Hierarchical Memory Model (HMM) of computation. It is intended to model computers with multiple levels in the memory hierarchy. Access to memory location x is assumed to take time ⌈ log x ⌉. Tight lower and upper bounds are given in this model for the time complexity of searching, sorting, matrix multiplication and FFT. Efficient algorithms in this model utilize locality of reference by bringing data into fast memory and using them several times before returning them to slower memory. It is shown that the circuit simulation problem has inherently poor locality of reference. The results are extended to HMM's where memory access time is given by an arbitrary (nondecreasing) function. Tight upper and lower bounds are obtained for HMM's with polynomial memory access time; the algorithms for searching, FFT and matrix multiplication are shown to be optimal for arbitrary memory access time. On-line memory management algorithms for the HMM model are also considered. An algorithm that uses LRU policy at the successive ``levels'' of the memory hierarchy is shown to be optimal.},
@@ -82,7 +98,8 @@
 	doi = {10.1145/28395.28428},
 	pages = {305--314},
 	title = {A model for hierarchical memory},
-	year = {1987}}
+	year = {1987},
+	bdsk-url-1 = {https://doi.org/10.1145/28395.28428}}
 
 @article{v-eicvm-21,
 	abstract = {The information capacity of the universe has been a topic of great debate since the 1970s and continues to stimulate multiple branches of physics research. Here, we used Shannon's information theory to estimate the amount of encoded information in all the visible matter in the universe. We achieved this by deriving a detailed formula estimating the total number of particles in the observable universe, known as the Eddington number, and by estimating the amount of information stored by each particle about itself. We determined that each particle in the observable universe contains 1.509 bits of information and there are ∼6 × 1080 bits of information stored in all the matter particles of the observable universe.},
@@ -110,7 +127,8 @@
 	pages = {825--874},
 	title = {The holographic principle},
 	volume = {74},
-	year = {2002}}
+	year = {2002},
+	bdsk-url-1 = {https://doi.org/10.1103/RevModPhys.74.825}}
 
 @inproceedings{h-drqg-09,
 	arxiv = {gr-qc/9310026},
@@ -153,7 +171,8 @@
 	pages = {1805--1823},
 	title = {How does the Entropy/Information Bound Work?},
 	volume = {35},
-	year = {2005}}
+	year = {2005},
+	bdsk-url-1 = {https://doi.org/10.1007/s10701-005-7350-7}}
 
 @misc{gj-waopc-22,
 	arxiv = {2206.13851},
@@ -163,7 +182,8 @@
 	doi = {10.48550/ARXIV.2206.13851},
 	howpublished = {Preprint},
 	title = {Which arithmetic operations can be performed in constant time in the {RAM} model with addition?},
-	year = {2022}}
+	year = {2022},
+	bdsk-url-1 = {https://doi.org/10.48550/ARXIV.2206.13851}}
 
 @article{g-mqs-89,
 	abstract = {THE method of quarter squares consists in the use of the formula ab = ¼(a+b)2 - ¼(a-b)2 to effect the multiplication of two numbers, a and b. If we are provided with a table giving the values of ¼n2 up to a given value of n, we may obtain, by the aid of this formula, without performing any multiplication, the product of any two numbers whose sum does not exceed the limit of the table.},
@@ -190,7 +210,8 @@
 	pages = {13--27},
 	title = {Parity, circuits, and the polynomial-time hierarchy},
 	volume = {17},
-	year = {1984}}
+	year = {1984},
+	bdsk-url-1 = {https://doi.org/10.1007/BF01744431}}
 
 @article{k-eapr-59,
 	author = {Kaphengst, Heinz},
