--- a/algorithms.bib
+++ b/algorithms.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2025-08-16 15:33:47 -0500 
+%% Created for Jeff Erickson at 2025-10-13 09:48:39 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -19,7 +19,8 @@
 	keywords = {graph entropy, partial order},
 	pages = {359--368},
 	title = {Sorting under partial information (without the ellipsoid algorithm)},
-	year = {2010}}
+	year = {2010},
+	bdsk-url-1 = {https://doi.org/10.1145/1806689.1806740}}
 
 @article{kk-es-95,
 	abstract = {We reconsider the old problem of sorting under partial information, and give polynomial time algorithms for the following tasks: (1) Given a partial order P, find (adaptively) a sequence of comparisons (questions of the form, "is x < y?") which sorts ( i.e., finds an unknown linear extension of) P using O(log(e(P))) comparisons in worst case (where e(P) is the number of linear extensions of P). (2) Compute (on line) answers to any comparison algorithm for sorting a partial order P which force the algorithm to use Ω(log(e(P))) comparisons. (3) Given a partial order P of size n, estimate e(P) to within a factor exponential in n. (We give upper and lower bounds which differ by the factor nn/n!.) Our approach, based on entropy of the comparability graph of P and convex minimization via the ellipsoid method, is completely different from earlier attempts to deal with these questions.},
@@ -32,7 +33,8 @@
 	pages = {390--399},
 	title = {Entropy and Sorting},
 	volume = {51},
-	year = {1995}}
+	year = {1995},
+	bdsk-url-1 = {https://doi.org/10.1006/jcss.1995.1077}}
 
 @article{f-gitbs-76,
 	abstract = {We define a sorting problem on an n element set S to be a family 〈A1,{\ldots},Ar〉 of disjoint subsets of the set of n! linear orderings on S. Given an ordering ω ∈ ∪jAj, we want to determine to which subset Aj the ordering ω belongs by performing a sequence of comparisons between the elements of S. The classical sorting problem corresponds to the case where the subsets Aj comprise the n! singleton sets of orderings. If a sorting problem is defined by r nonempty subsets Aj, then the information theory bound states that at least log2 r comparisons are required to solve that problem in the worst case. The purpose of this paper is to investigate the accuracy of this bound. While we show that it is usually very weak, we are nevertheless able to define a large class of problems for which this bound is good. As an application, we show that if X and Y are n element sets of real numbers, then the n2 element set X + Y can be sorted with O (n2) comparisons, improving upon the n2 log2 n bound established by Harper et al. The problem of sorting X + Y was posed by Berkelamp.},
@@ -45,7 +47,8 @@
 	pages = {355--361},
 	title = {How good is the information theory bound in sorting?},
 	volume = {1},
-	year = {1976}}
+	year = {1976},
+	bdsk-url-1 = {https://doi.org/10.1016/0304-3975(76)90078-5}}
 
 @article{v-adsem-08,
 	author = {Vitter, Jeffrey Scott},
@@ -325,13 +328,14 @@ This chapter discusses machine models and simulations. The existence of many dif
 	booktitle = {Algorithms and Complexity},
 	chapter = {1},
 	date-added = {2025-07-03 16:24:18 -0500},
-	date-modified = {2025-07-03 16:25:59 -0500},
+	date-modified = {2025-10-13 09:48:23 -0500},
 	doi = {doi.org/10.1016/B978-0-444-88071-0.50006-0},
 	editor = {{van Leeuwen}, Jan},
 	pages = {1--66},
 	publisher = {Elsevier},
 	series = {Handbook of Theoretical Computer Science},
 	title = {Machine Models and Simulations},
+	volume = {A},
 	year = {1990},
 	bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/B9780444880710500060},
 	bdsk-url-2 = {https://doi.org/10.1016/B978-0-444-88071-0.50006-0}}
